# get-selected-text

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  windows.rs
