[package]
edition = "2021"
name = "one-lang_get-selected-text"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
tokio = { version = "1.40.0", features = ["full", "rt", "rt-multi-thread", "macros", "time"] }
thiserror = "1.0.63"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "implement"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
